<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        android:id="@+id/scrollView"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android">
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="ContentDescription"
        android:fitsSystemWindows="true"
        tools:context=".ui.profile.ProfileActivity">

    <ImageView
            android:id="@+id/iv_header"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/profile_bg"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="16:9"
            android:layout_width="0dp"
            android:layout_height="0dp"/>

    <ImageButton
            android:id="@+id/btn_switch_theme"
            app:layout_constraintTop_toTopOf="@id/iv_avatar"
            app:layout_constraintBottom_toBottomOf="@id/iv_avatar"
            app:layout_constraintEnd_toStartOf="@id/iv_avatar"
            android:layout_marginEnd="@dimen/spacing_huge_32"
            android:src="@drawable/ic_switch_day_night"
            android:background="@drawable/btn_round_bg"
            android:layout_width="@dimen/btn_round_size_40"
            android:layout_height="@dimen/btn_round_size_40"/>

    <ru.skillbranch.devintensive.ui.custom.CircleImageView
            android:id="@+id/iv_avatar"
            android:src="@drawable/avatar_default"
            app:layout_constraintTop_toTopOf="@id/iv_header"
            app:layout_constraintBottom_toTopOf="@id/tv_nick_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintVertical_bias=".2"
            android:layout_width="@dimen/avatar_round_size"
            android:layout_height="@dimen/avatar_round_size"
            />

    <ImageButton
            android:id="@+id/btn_edit"
            app:layout_constraintTop_toTopOf="@id/iv_avatar"
            app:layout_constraintBottom_toBottomOf="@id/iv_avatar"
            app:layout_constraintStart_toEndOf="@id/iv_avatar"
            android:layout_marginStart="@dimen/spacing_huge_32"
            android:src="@drawable/ic_edit"
            android:background="@drawable/btn_round_bg"
            android:layout_width="@dimen/btn_round_size_40"
            android:layout_height="@dimen/btn_round_size_40"/>

    <TextView
            android:id="@+id/tv_nick_name"
            style="@style/Profile.Header.Nickname"
            tools:text="John Doe"
            app:layout_constraintTop_toBottomOf="@id/iv_avatar"
            app:layout_constraintBottom_toTopOf="@id/tv_rank"
            app:layout_constraintStart_toStartOf="@id/iv_avatar"
            app:layout_constraintEnd_toEndOf="@id/iv_avatar"
            app:layout_constraintVertical_chainStyle="packed"
            android:layout_marginTop="@dimen/spacing_normal_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <TextView
            android:id="@+id/tv_rank"
            style="@style/Profile.Header.Rank"
            tools:text="Junior Android Developer"
            app:layout_constraintTop_toBottomOf="@id/tv_nick_name"
            app:layout_constraintStart_toStartOf="@id/tv_nick_name"
            app:layout_constraintEnd_toEndOf="@id/tv_nick_name"
            app:layout_constraintBottom_toBottomOf="@id/iv_header"
            app:layout_constraintVertical_chainStyle="packed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <View
            android:id="@+id/metrics_container"
            app:layout_constraintTop_toBottomOf="@id/iv_header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/iv_header"
            android:background="?colorAccentedSurface"
            android:layout_width="0dp"
            android:layout_height="80dp"/>

    <View
            android:id="@+id/metrics_divider"
            android:layout_marginTop="@dimen/spacing_normal_16"
            android:layout_marginBottom="@dimen/spacing_normal_16"
            android:background="@color/color_divider_light"
            app:layout_constraintTop_toTopOf="@id/metrics_container"
            app:layout_constraintBottom_toBottomOf="@id/metrics_container"
            app:layout_constraintStart_toStartOf="@id/metrics_container"
            app:layout_constraintEnd_toEndOf="@id/metrics_container"
            android:layout_width="1dp"
            android:layout_height="0dp"/>


    <TextView
            android:id="@+id/tv_rating"
            style="@style/Profile.Metrics.Value"
            android:drawableStart="@drawable/ic_sp_24"
            app:layout_constraintStart_toStartOf="@id/tv_rating_label"
            app:layout_constraintEnd_toEndOf="@id/tv_rating_label"
            app:layout_constraintBottom_toTopOf="@id/tv_rating_label"
            app:layout_constraintTop_toTopOf="@id/metrics_container"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <TextView
            android:id="@+id/tv_rating_label"
            style="@style/Profile.Metrics.Label"
            app:layout_constraintStart_toStartOf="@id/metrics_container"
            app:layout_constraintEnd_toStartOf="@id/metrics_divider"
            app:layout_constraintTop_toBottomOf="@id/tv_rating"
            app:layout_constraintBottom_toBottomOf="@id/metrics_container"
            android:text="@string/profile_label_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <TextView
            android:id="@+id/tv_respect"
            style="@style/Profile.Metrics.Value"
            android:drawableStart="@drawable/ic_respect_24"
            app:layout_constraintStart_toStartOf="@id/tv_respect_label"
            app:layout_constraintEnd_toEndOf="@id/tv_respect_label"
            app:layout_constraintTop_toTopOf="@id/metrics_container"
            app:layout_constraintBottom_toTopOf="@id/tv_respect_label"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <TextView
            android:id="@+id/tv_respect_label"
            style="@style/Profile.Metrics.Label"
            app:layout_constraintStart_toStartOf="@id/metrics_divider"
            app:layout_constraintEnd_toEndOf="@id/metrics_container"
            app:layout_constraintTop_toBottomOf="@id/tv_respect"
            app:layout_constraintBottom_toBottomOf="@id/metrics_container"
            android:text="@string/profile_label_respect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <ImageView
            android:id="@+id/iv_info_avatar"
            app:layout_constraintTop_toBottomOf="@id/metrics_container"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/ic_avatar"
            android:layout_marginTop="@dimen/spacing_normal_16"
            android:layout_marginStart="@dimen/spacing_normal_16"
            android:layout_width="@dimen/btn_round_size_40"
            android:layout_height="@dimen/btn_round_size_40"/>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/wr_first_name"
            style="@style/Profile.InfoItem"
            app:layout_constraintStart_toEndOf="@id/iv_info_avatar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/metrics_container"
            android:hint="@string/profile_hint_first_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_first_name"
                style="@style/Profile.EditText.Single"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/wr_last_name"
            style="@style/Profile.InfoItem"
            android:hint="@string/profile_hint_last_name"
            app:layout_constraintStart_toStartOf="@id/wr_first_name"
            app:layout_constraintTop_toBottomOf="@id/wr_first_name"
            app:layout_constraintEnd_toEndOf="@id/wr_first_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_last_name"
                style="@style/Profile.EditText.Single"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <View
            android:id="@+id/profile_delimiter1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/wr_last_name"
            android:background="@color/color_divider_dark"
            android:layout_marginTop="5dp"
            android:layout_marginStart="@dimen/space_maximum_72"
            android:layout_marginEnd="@dimen/spacing_normal_16"
            android:layout_width="0dp"
            android:layout_height="1dp"/>

    <ImageView
            android:id="@+id/iv_about"
            android:src="@drawable/ic_about"
            android:layout_marginTop="@dimen/spacing_normal_16"
            app:layout_constraintStart_toStartOf="@id/iv_info_avatar"
            app:layout_constraintTop_toBottomOf="@id/profile_delimiter1"
            android:layout_width="@dimen/btn_round_size_40"
            android:layout_height="@dimen/btn_round_size_40"/>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/wr_about"
            style="@style/Profile.InfoItem"
            android:hint="@string/profile_hint_about"
            app:layout_constraintStart_toEndOf="@id/iv_about"
            app:layout_constraintTop_toBottomOf="@id/profile_delimiter1"
            app:layout_constraintEnd_toEndOf="@id/profile_delimiter1"
            app:counterEnabled="false"
            app:counterMaxLength="128"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_about"
                style="@style/Profile.EditText.MultiLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <View
            android:id="@+id/profile_delimiter2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/wr_about"
            android:layout_marginTop="5dp"
            android:background="@color/color_divider_dark"
            android:layout_marginStart="@dimen/space_maximum_72"
            android:layout_marginEnd="@dimen/spacing_normal_16"
            android:layout_width="0dp"
            android:layout_height="1dp"/>

    <ImageView
            android:id="@+id/iv_repo"
            android:src="@drawable/ic_repo"
            android:layout_marginTop="@dimen/spacing_normal_16"
            app:layout_constraintStart_toStartOf="@id/iv_info_avatar"
            app:layout_constraintTop_toBottomOf="@id/profile_delimiter2"
            android:layout_width="@dimen/btn_round_size_40"
            android:layout_height="@dimen/btn_round_size_40"/>

    <ru.skillbranch.devintensive.ui.custom.SmartTextInputLayout
            android:id="@+id/wr_repository"
            style="@style/Profile.InfoItem"
            app:layout_constraintStart_toEndOf="@id/iv_repo"
            app:layout_constraintEnd_toStartOf="@id/iv_preview_mode"
            app:layout_constraintTop_toBottomOf="@id/profile_delimiter2"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

        <EditText
                android:id="@+id/et_repository"
                style="@style/Profile.EditText.Single"
                android:hint="@string/profile_hint_repository"
                android:inputType="textUri"
                android:imeOptions="actionDone|flagNoExtractUi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no" />

    </ru.skillbranch.devintensive.ui.custom.SmartTextInputLayout>

    <ImageView
            android:id="@+id/iv_preview_mode"
            app:layout_constraintTop_toTopOf="@id/wr_repository"
            app:layout_constraintBottom_toBottomOf="@id/wr_repository"
            app:layout_constraintStart_toEndOf="@id/wr_repository"
            app:layout_constraintEnd_toEndOf="@id/wr_about"
            android:src="@drawable/ic_eye_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>